# EasyHosts

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  core.cpp
src/: core.cpp  widget.cpp
